--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "setmaster",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "packageManager": "pnpm@9.5.0",
   "workspaces": [
-    "configs/*",
     "packages/*"
   ],
   "scripts": {
-    "lint": "biome check --config-path ./biome.json .",
-    "lint:fix": "biome check --config-path ./biome.json --write --unsafe .",
+    "biome:check": "pnpm biome check .",
+    "biome:fix": "pnpm biome:check --write",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "tsx": "^4.15.6",
-    "typescript": "^5.6.2"
+    "@biomejs/biome": "^1.9.4"
   }
 }
