--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -14,5 +14,5 @@
     "sourceRoot": "./src",
     "types": ["vitest/globals"]
   },
-  "include": ["./src/*"]
+  "include": ["./src/**/*.ts", "./src/*.ts"],
 }
